--- a/index.html
+++ b/index.html
@@ -10,64 +10,64 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | [Challenge Name Here]</title>
 </head>
-<body>
-  <header class="header">
+<body class="dark">
+  <header class="header dark">
     <div class="dashboard-total-followers">
-      <h1>Social Media Dashboard</h1>
+      <h1 class="dark">Social Media Dashboard</h1>
       <p>Total Followers: 23,004</p>
     </div>
     <div class="dark-mode">
       <p>Dark Mode</p>
-      <label class="switch">
+      <label class="switch dark">
         <input type="checkbox">
-        <span class="slider"></span>
+        <span class="slider dark"></span>
       </label>
     </div>
   </header>
-  <main class="container">
+  <main class="container dark">
     <section class="total-overview">
-      <div class="facebook total">
+      <div class="facebook total dark">
         <div class="name">
           <img src="images/icon-facebook.svg" alt="icon facebook">
           <p>@nathanf</p>
         </div>
-        <h3>1987</h3>
+        <h3 class="dark">1987</h3>
         <p>Followers</p>
         <div class="positif">
           <img src="images/icon-up.svg" alt="icon up">
           <p>12 Today</p>
         </div>
       </div>
-      <div class="twitter total">
+      <div class="twitter total dark">
         <div class="name">
           <img src="images/icon-twitter.svg" alt="icon twitter">
           <p>@nathanf</p>
         </div>
-        <h3>1044</h3>
+        <h3 class="dark">1044</h3>
         <p>Followers</p>
         <div class="positif">
           <img src="images/icon-up.svg" alt="icon up">
           <p>99 Today</p>
         </div>
       </div>
-      <div class="instagram total">
+      <div class="instagram total dark">
         <div class="name">
           <img src="images/icon-instagram.svg" alt="icon instagram">
           <p>@realnathanf</p>
         </div>
-        <h3>11k</h3>
+        <h3 class="dark">11k</h3>
         <p>Followers</p>
         <div class="positif">
           <img src="images/icon-up.svg" alt="icon up">
           <p>1099 Today</p>
         </div>
       </div>
-      <div class="youtube total">
+      <div class="youtube total dark">
         <div class="name">
           <img src="images/icon-youtube.svg" alt="icon youtube">
           <p>Nathan F.</p>
         </div>
-        <h3>8239</h3>
+        <h3 class="dark">8239</h3>
         <p>Subscribers</p>
         <div class="negatif">
           <img src="images/icon-down.svg" alt="icon down">
@@ -75,12 +75,12 @@
         </div>
       </div>
     </section>
-    <h2>Overview - Today</h2>
+    <h2 class="dark">Overview - Today</h2>
     <section class="today-overview">
-      <div class="facebook-today-views today">
+      <div class="facebook-today-views today dark">
         <div class="page-views">
           <p>Page Views</p>
-          <span>87</span>
+          <span class="dark">87</span>
         </div>
         <div>
           <img src="images/icon-facebook.svg" alt="icon facebook">
@@ -90,10 +90,10 @@
           </div>
         </div>
       </div>
-      <div class="facebook-today-likes today">
+      <div class="facebook-today-likes today dark">
         <div class="page-likes">
           <p>Likes</p>
-          <span>52</span>
+          <span class="dark">52</span>
         </div>
         <div>
           <img src="images/icon-facebook.svg" alt="icon facebook">
@@ -103,10 +103,10 @@
           </div>
         </div>
       </div>
-      <div class="instagram-today-likes today">
+      <div class="instagram-today-likes today dark">
         <div class="page-likes">
           <p>Likes</p>
-          <span>5462</span>
+          <span class="dark">5462</span>
         </div>
         <div>
           <img src="images/icon-instagram.svg" alt="icon instagram">
@@ -116,10 +116,10 @@
           </div>
         </div>
       </div>
-      <div class="instagram-today-views today">
+      <div class="instagram-today-views today dark">
         <div class="page-views">
           <p>Profile Views</p>
-          <span>52k</span>
+          <span class="dark">52k</span>
         </div>
         <div>
           <img src="images/icon-instagram.svg" alt="icon instagram">
@@ -129,10 +129,10 @@
           </div>
         </div>
       </div>
-      <div class="twitter-today-views today">
+      <div class="twitter-today-views today dark">
         <div class="page-views">
           <p>Retweets</p>
-          <span>117</span>
+          <span class="dark">117</span>
         </div>
         <div>
           <img src="images/icon-twitter.svg" alt="icon twitter">
@@ -142,10 +142,10 @@
           </div>
         </div>
       </div>
-      <div class="twitter-today-likes today">
+      <div class="twitter-today-likes today dark">
         <div class="page-likes">
           <p>Likes</p>
-          <span>507</span>
+          <span class="dark">507</span>
         </div>
         <div>
           <img src="images/icon-twitter.svg" alt="icon twitter">
@@ -155,10 +155,10 @@
           </div>
         </div>
       </div>
-      <div class="youtube-today-likes today">
+      <div class="youtube-today-likes today dark">
         <div class="page-likes">
           <p>Likes</p>
-          <span>107</span>
+          <span class="dark">107</span>
         </div>
         <div>
           <img src="images/icon-youtube.svg" alt="icon youtube">
@@ -168,10 +168,10 @@
           </div>
         </div>
       </div>
-      <div class="youtube-today-likes today">
+      <div class="youtube-today-likes today dark">
         <div class="page-views">
           <p>Total Views</p>
-          <span>1407</span>
+          <span class="dark">1407</span>
         </div>
         <div>
           <img src="images/icon-youtube.svg" alt="icon youtube">
